--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <h1>Calculate</h1>
-<p>team members: Kaleb Richardson</p>
+<p>Team members: Kaleb Richardson</p>
 <p>turn this code to create a calculator</p>
 <p>I am going to use javascript or python and use github or visual studio code in order to create the calculator</p>
-<p>The last date the prospoal was update was november 3 2023</p>
+<p>The last date the prospoal was update was november 8 2023</p>
 <p>Featutre list:able to add and subtract numbers and calculate them</p>
 <p>Future Feature list:to show graphs,and use other math features such as permutation and combination problems</p>
-<p>basic technical features:being able to add numbers and calculate them</p>
-<p>Advanced Technical features:able to add,subtract, mutlipy and divide numbers </p>
+<p>Basic Technical Features:being able to add numbers and calculate them</p>
+<p>Advanced Technical Features:able to add,subtract, mutlipy and divide numbers </p>
