--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <h1>Calculate</h1>
-<p>2.Team members: Kaleb Richardson</p>
-<p>3.Turn this code to create a calculator</p>
-<p>4.I am going to use javascript or python and use github or visual studio code in order to create the calculator</p>
-<p>5.The last date the prospoal was update was november 8 2023</p>
-<p>6.Featutre list:able to add and subtract numbers and calculate them</p>
-<p>7.Future Feature list:to show graphs,and use other math features such as permutation and combination problems</p>
-<p>8.Basic Technical Features:being able to add numbers and calculate them</p>
-<p>9.Advanced Technical Features:able to add,subtract, mutlipy and divide numbers </p>
+<hr>
+<p>Team members: Kaleb Richardson</p>
+<hr>
+<p>Turn this code to create a calculator</p>
+<hr>
+<p>I am going to use javascript or python and use github or visual studio code in order to create the calculator</p>
+<hr>
+<p>The last date the prospoal was update was December 10 2023</p>
+<hr>
+<p>Featutre list:able to add and subtract numbers and calculate them</p>
+<hr>
+<p>Future Feature list:to show graphs,and use other math features such as permutation and combination problems</p>
+<hr>
+<p>Basic Technical Features:being able to add and subtract numbers and calculate them</p>
+<hr>
+<p>Advanced Technical Features:able to  mutlipy and divide numbers </p>
