--- a/index.html
+++ b/index.html
@@ -15,3 +15,12 @@
 <p>Basic Technical Features:being able to add and subtract numbers and calculate them</p>
 <hr>
 <p>Advanced Technical Features:able to  mutlipy and divide numbers </p>
+
+<p>I orginally planned to make a scientific calculator</p>
+<hr>
+<p>I was able to delivered add, subtract, multiply, and divide</p>
+<hr>
+<p>I would add other features on the calaulator such as cos,tan,sin and more if i had more time</p>
+<hr>
+<p>My contact information is Kricharson5132005@gmail.com if someone wants me to enchance this application</p>
+
