--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <h1>Calculate</h1>
 <hr>
+<style>
+body {
+  background-color: coral;
+}
+</style>
 <p>Team members: Kaleb Richardson</p>
 <hr>
 <p>Turn this code to create a calculator</p>
